Add comments to methods

--- a/ToDoList/src/.gitignore
+++ b/ToDoList/src/.gitignore
@@ -4,3 +4,11 @@
 /Project.class
 /Task.class
 /TaskManager.class
+/DateManager.class
+/DueDate.class
+/Inputs.class
+/Test.class
+/MathTests.class
+/Comparing.class
+/override.class
+/CaseOneParameter.class
